--- a/Practico/index.html
+++ b/Practico/index.html
@@ -13,7 +13,7 @@
             <input type="number" id="Handball_A" placeholder="Handball">
             <input type="number" id="Resistencia_A" placeholder="Resistencia">
             <input type="number" id="Ajedrez_A" placeholder="Ajedrez">
-            <button onclick="AgregarPuntos('Equipo_A')">Agregar Puntos</button>
+            <button onclick="AgregarPuntos()">Agregar Puntos</button>
         </div>
         <div class="Equipo">
             <h2>Equipo B</h2>
@@ -25,6 +25,7 @@
 
         <button onclick="MostrarResultados()">Mostrar Resultados</button>
     </div>
+    <h1 onclick="this.innerHTML = 'Ooops!'">Click este texto</h1>
     <script src="typescript.js"></script>
 </body>
 </html>
