--- a/Practico/index.html
+++ b/Practico/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="App">
-        <div class="Equipo">
+        <div class="Equipo1">
             <!-- Con el ID del equipo 1 se puede redirigir al usuario con el equipo ganador -->
             <h2 id="Equipo1">Tribu Negra</h2>      
             <label for="">Handball</label>
