--- a/Practico/index.html
+++ b/Practico/index.html
@@ -7,26 +7,27 @@
     <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
+    <h1> Contador de Puntos </h1>
     <div class="App">
         <div class="Equipo1">
             <!-- Con el ID del equipo 1 se puede redirigir al usuario con el equipo ganador -->
             <h2 id="Equipo1">Tribu Negra</h2>      
             <label for="">Handball</label>
-            <input type="number" id="Handball_A" value="0">
+            <input type="number" id="Handball_A" placeholder="0" r>
             <label for="">Resistencia</label>
-            <input type="number" id="Resistencia_A" value="0">
+            <input type="number" id="Resistencia_A" placeholder="0">
             <label for="">Ajedrez</label>
-            <input type="number" id="Ajedrez_A" value="0">
+            <input type="number" id="Ajedrez_A" placeholder="0">
         </div>
         <div class="Equipo">
             <!-- Con el ID del equipo 1 se puede redirigir al usuario con el equipo ganador -->
             <h2 id="Equipo2">Tribu Roja</h2>
             <label for="">HandballB</label>
-            <input type="number" id="Handball_B" value="0">
+            <input type="number" id="Handball_B" placeholder="0">
             <label for="">ResistenciaB</label>
-            <input type="number" id="Resistencia_B" value="0">
+            <input type="number" id="Resistencia_B" placeholder="0">
             <label for="">AjedrezB</label>
-            <input type="number" id="Ajedrez_B" value="0">
+            <input type="number" id="Ajedrez_B" placeholder="0">
             
         </div>
 
@@ -35,9 +36,10 @@
     </div>
     <h1 id="PuntosNegra">Puntos de la Negra</h1>
     <h1 id="PuntosRoja">Puntos de la Roja</h1>
+    <h1 id="Disciplina">Disciplina con mas Puntos</h1>
     <br>
     <h1 id="Ganador">Gano la tribu... </h1>
-    <h1 id="Disciplina">Disciplina con mas Puntos</h1>
+    
     <script src="lalo.js"></script>
 </body>
 </html>
